--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@visurel/iconify-angular": "^11.0.0",
     "angular-svg-icon": "^13.0.0",
     "apexcharts": "^3.35.3",
+    "flowbite": "^2.3.0",
     "iconify": "^1.4.0",
     "ng-apexcharts": "^1.7.1",
     "rxjs": "~7.4.0",
