--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "iconify": "^1.4.0",
     "ng-apexcharts": "^1.7.1",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.11.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
