--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rxjs": "~7.4.0",
     "sweetalert2": "^11.11.0",
     "tslib": "^2.3.0",
+    "zod": "^3.23.8",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
